<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navgraph"
    app:startDestination="@id/welcomeFragment"
    >

    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.example.ezvault.view.fragment.WelcomeFragment"
        android:label="WelcomeFragment"
        tools:layout="@layout/fragment_welcome">
        <action
            android:id="@+id/welcomeFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
        <action
            android:id="@+id/welcomeFragment_to_newUserFragment"
            app:destination="@id/newUserFragment" />
    </fragment>
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.ezvault.view.fragment.LoginFragment"
        android:label="LoginFragment"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/loginFragment_to_itemsFragment"
            app:destination="@id/itemsFragment"
            app:popUpToInclusive="true"
            app:popUpTo="@id/welcomeFragment"/>
        <action
            android:id="@+id/loginFragment_to_welcomeFragment"
            app:destination="@id/welcomeFragment" />
    </fragment>
    <fragment
        android:id="@+id/newUserFragment"
        android:name="com.example.ezvault.view.fragment.NewUserFragment"
        android:label="NewUserFragment"
        tools:layout="@layout/fragment_new_user">
        <action
            android:id="@+id/newUserFragment_to_itemsFragment"
            app:destination="@id/itemsFragment"
            app:popUpTo="@id/welcomeFragment"
            app:popUpToInclusive="true"/>
        <action
            android:id="@+id/newUserFragment_to_welcomeFragment"
            app:destination="@id/welcomeFragment" />
    </fragment>
    <fragment
        android:id="@+id/itemsFragment"
        android:name="com.example.ezvault.view.fragment.ItemsFragment"
        android:label="Items"
        tools:layout="@layout/fragment_items" >
        <action
            android:id="@+id/itemsFragment_to_addItemFragment"
            app:destination="@id/addItemFragment" />
        <argument
            android:name="item_name"
            app:argType="string" />
        <action
            android:id="@+id/itemsFragment_to_viewItemFragment"
            app:destination="@id/viewItemFragment" />
        <action
            android:id="@+id/itemsFragment_to_filterFragment"
            app:destination="@id/filterFragment" />
    </fragment>
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.example.ezvault.view.fragment.SearchFragment"
        android:label="Search"
        tools:layout="@layout/fragment_search" />
    <fragment
        android:id="@+id/tagsFragment"
        android:name="com.example.ezvault.view.fragment.TagsFragment"
        android:label="Tags"
        tools:layout="@layout/fragment_tags" >
        <action
            android:id="@+id/tagsFragment_to_tagDialogue"
            app:destination="@id/tagDialogue" />
    </fragment>
    <fragment
        android:id="@+id/addItemFragment"
        android:name="com.example.ezvault.view.fragment.AddItemFragment"
        android:label="New Item"
        tools:layout="@layout/fragment_edit_item_details" >
        <action
            android:id="@+id/addItemFragment_to_itemsFragment"
            app:destination="@id/itemsFragment" />
        <action
            android:id="@+id/addItemFragment_to_cameraFragment"
            app:destination="@id/cameraFragment" />
    </fragment>
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.ezvault.view.fragment.ProfileFragment"
        android:label="Profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/profileFragment_to_welcomeFragment"
            app:destination="@id/welcomeFragment" />
    </fragment>
    <dialog
        android:id="@+id/tagDialogue"
        android:name="com.example.ezvault.view.fragment.TagDialogue"
        android:label="TagDialogue"
        tools:layout="@layout/add_tag_dialogue"
        />
    <fragment
        android:id="@+id/viewItemFragment"
        android:name="com.example.ezvault.view.fragment.ViewItemFragment"
        android:label="Item Details"
        tools:layout="@layout/fragment_view_item_details">
        <action
            android:id="@+id/viewItemFragment_to_editItemDetails"
            app:destination="@id/editItemDetails" />
        <action
            android:id="@+id/viewItemFragment_to_itemsFragment"
            app:popUpToInclusive="true"
            app:destination="@id/itemsFragment" />
    </fragment>
    <fragment
        android:id="@+id/cameraFragment"
        android:name="com.example.ezvault.view.fragment.CameraFragment"
        android:label="CameraFragment" >
        <action
            android:id="@+id/cameraFragment_to_addItemFragment"
            app:destination="@id/addItemFragment" />
        <action
            android:id="@+id/cameraFragment_to_editItemDetails"
            app:destination="@id/editItemDetails" />
    </fragment>
    <fragment
        android:id="@+id/filterFragment"
        android:name="com.example.ezvault.view.fragment.FilterFragment"
        android:label="Filter / Sort"
        tools:layout="@layout/fragment_filter" >
        <action
            android:id="@+id/filterFragment_to_itemsFragment"
            app:popUpToInclusive="true"
            app:destination="@id/itemsFragment" />
    </fragment>
    <fragment
        android:id="@+id/editItemDetails"
        android:name="com.example.ezvault.view.fragment.EditItemDetails"
        android:label="Edit Item"
        tools:layout="@layout/fragment_edit_item_details" >
        <action
            android:id="@+id/editItemDetails_to_cameraFragment"
            app:destination="@id/cameraFragment" />
        <action
            android:id="@+id/editItemDetails_to_viewItemFragment"
            app:popUpToInclusive="true"
            app:destination="@id/viewItemFragment" />
    </fragment>
</navigation>