...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/existing_user_button"
        android:layout_width="340dp"
        android:layout_height="80dp"
        android:layout_marginBottom="72dp"
        android:backgroundTint="#BCD7F8"
        android:fontFamily="@font/fredoka_one"
        android:text="Existing User"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/new_user_button"
        android:layout_width="340dp"
        android:layout_height="80dp"
        android:layout_marginBottom="44dp"
        android:backgroundTint="#BCD7F8"
        android:fontFamily="@font/fredoka_one"
        android:text="New User"
...
