...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/create_user_button"
        android:layout_width="340dp"
        android:layout_height="80dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="#BCD7F8"
        android:fontFamily="@font/fredoka_one"
        android:text="Create"
...
        app:layout_constraintBottom_toTopOf="@+id/create_user_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/create_user_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@null"
        app:layout_constraintStart_toStartOf="parent"
...
