...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">

                <ImageButton
                    android:id="@+id/edit_take_pic"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:paddingVertical="14dp"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"
                    app:srcCompat="@drawable/icon_camera" />

                <ImageButton
                    android:id="@+id/edit_gallery"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:paddingVertical="14dp"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"
                    app:srcCompat="@android:drawable/ic_menu_gallery" />
...
