<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/view_item_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="Edit"
        android:icon="@drawable/icon_edit"
        app:showAsAction="ifRoom"/>
    <item
...
